--- a/src/index.haml
+++ b/src/index.haml
@@ -43,7 +43,7 @@
         BV.init();
 
         if (Modernizr.touch) {
-            BV.show('../image/gagaga.jpg');//タッチデバイスでの画像を指定
+            BV.show('../hitori.jpg');//タッチデバイスでの画像を指定
         } else {
             BV.show('../『夜は短し歩けよ乙女』 90秒予告.mp4',{ambient:true});
         }
