--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,7 +17,7 @@ body {
   padding: 0;
   margin: 0;
   font-size: 14px;
-  background: url(bg-image.jpg) repeat left top;/* IE6～8用の背景画像 */
+  background: url(../../hitori.jpg) repeat left top;/* IE6～8用の背景画像 */
 }
 #big-video-wrap {
   color: #b9f8ff;/* 動画のメッセージを目立たなくする */
